--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
     "description": "",
     "main": "index.js",
     "scripts": {
+        "start":"ts-node index.ts",
+        "build":"tsc",
         "devStart": "nodemon index.ts",
-        "test": "jest"
+        "test": "jest",
+        "vercel-build": "echo hello"
+
     },
     "keywords": [],
     "author": "",
