--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,10 @@
         "strict":true,
         "outDir":"dist",
         "esModuleInterop": true,
-        
+        "target": "esnext",
+        "module": "commonjs",
+        "forceConsistentCasingInFileNames": true,
+        "skipLibCheck": true,
 
 
     },
