--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start":"ts-node index.ts",
-        "build":"tsc",
+        "start": "ts-node index.ts",
+        "build": "tsc",
         "devStart": "nodemon index.ts",
         "test": "jest",
         "vercel-build": "echo hello"
-
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@types/cors": "^2.8.14",
+        "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "mongoose": "^7.5.0",
