--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "ts-node index.ts",
-        "build": "tsc",
-        "devStart": "nodemon index.ts",
+        "start": "ts-node src/index.ts",
+        "devStart": "nodemon src/index.ts",
         "test": "jest",
-        "vercel-build": "echo hello"
+        "build": "rimraf dist && tsc",
+        "ts.check": "tsc --project tsconfig.json",
+        "add-build": "git add dist"
     },
+    "pre-commit": [
+        "ts.check",
+        "build",
+        "add-build"
+      ], 
     "keywords": [],
     "author": "",
     "license": "ISC",
@@ -28,6 +34,8 @@
         "@types/node": "^20.6.0",
         "@types/supertest": "^2.0.12",
         "jest": "^29.6.4",
+        "pre-commit": "^1.2.2",
+        "rimraf": "^5.0.1",
         "supertest": "^6.3.3",
         "ts-node": "^10.9.1",
         "typescript": "^5.2.2"
