--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     },
     "include":[
         "./api/*.ts",
-        "./src/**/*.ts",
+        "./src/**/*",
         "/**/*.ts",
         "index.ts "
     ],
