--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,17 @@
 {
     "compilerOptions": {
-        "sourceMap": true,
-        "lib":["esnext"],
-        "strict":true,
-        "outDir":"dist",
-        "esModuleInterop": true,
-        "target": "esnext",
         "module": "commonjs",
-        "forceConsistentCasingInFileNames": true,
-        "skipLibCheck": true,
-
-
+        "esModuleInterop": true,
+        "allowSyntheticDefaultImports": true,
+        "target": "es6",
+        "noImplicitAny": true,
+        "moduleResolution": "node",
+        "sourceMap": true,
+        "outDir": "dist",
+        "baseUrl": ".",
+        "paths": {
+            "*": ["node_modules/*", "src/types/*"]
+        }
     },
-    "include":[
-        "./api/*.ts",
-        "./src/**/*",
-        "/**/*.ts",
-        "index.ts "
-    ],
-    "exclude":["node_modules"],
-}
+    "include": ["./src/**/*"]
+    }
